--- a/packages/mesa/install
+++ b/packages/mesa/install
@@ -11,6 +11,7 @@ do_install usr/lib/dri
 do_install usr/lib/mesa
 pkg_uses $1 gallium3d && do_install usr/lib/gbm
 pkg_uses $1 vdpau && do_install usr/lib/vdpau
+pkg_uses $1 xvmc && do_install usr/lib/libXvMC*
 
 MESA_LIBS="GL"
 
