mesa : fix install issue (patch by Yuval Levy)

--- a/packages/mesa/install
+++ b/packages/mesa/install
@@ -10,7 +10,7 @@ do_install usr/lib/libGLU.so*
 do_install usr/lib/dri
 do_install usr/lib/mesa
 pkg_uses $1 gallium3d && do_install usr/lib/gbm
-pkg_uses $1 vdpau && do_install usr/lib/vdpau
+[-d .install/usr/lib/vdpau ] && do_install usr/lib/vdpau
 pkg_uses $1 xvmc && do_install usr/lib/libXvMC*
 
 MESA_LIBS="GL"
