openssl : fix install & installdev scripts for x86_64 (patch by Yuval Levy)

--- a/packages/openssl/install
+++ b/packages/openssl/install
@@ -4,6 +4,12 @@
 
 cd $BUILD/$1*
 
-do_install usr/lib/libcrypto.so*
-do_install usr/lib/libssl.so*
-do_install usr/lib/engines
+if [ -d .install/usr/lib ]; then 
+  do_install usr/lib/libcrypto.so*
+  do_install usr/lib/libssl.so*
+  do_install usr/lib/engines
+else
+  do_install usr/lib64/libcrypto.so*
+  do_install usr/lib64/libssl.so*
+  do_install usr/lib64/engines
+fi
