vdr-sc: fix bug in install script

--- a/packages/vdr-sc/install
+++ b/packages/vdr-sc/install
@@ -18,13 +18,15 @@ for loc in $INCLUDED_LOCALES; do
   fi
 done
 
-mkdir -p $INSTALL/etc/vdr/plugins/$1
-touch $INSTALL/etc/vdr/plugins/$1/cardslot.conf
-touch $INSTALL/etc/vdr/plugins/$1/smartcard.conf
-touch $INSTALL/etc/vdr/plugins/$1/override.conf
-touch $INSTALL/etc/vdr/plugins/$1/SoftCam.key
-touch $INSTALL/etc/vdr/plugins/$1/cardclient.conf
+NAME=`echo $1 | sed s/vdr-//`
 
-#NAME=`echo $1 | sed s/vdr-//`
-#mkdir -p $INSTALL/etc/vdr/plugins.d
-#echo "PLUGIN=${NAME}" > $INSTALL/etc/vdr/plugins.d/50_$NAME
+mkdir -p $INSTALL/etc/vdr/plugins/$NAME
+touch $INSTALL/etc/vdr/plUgins/$NAME/cardslot.conf
+touch $INSTALL/etc/vdr/plugins/$NAME/smartcard.conf
+touch $INSTALL/etc/vdr/plugins/$NAME/override.conf
+touch $INSTALL/etc/vdr/plugins/$NAME/SoftCam.Key
+touch $INSTALL/etc/vdr/plugins/$NAME/cardclient.conf
+
+mkdir -p $INSTALL/etc/vdr/plugins.d
+echo "PLUGIN=${NAME}" > $INSTALL/etc/vdr/plugins.d/50_$NAME
+
