--- a/packages/util-linux-ng/install
+++ b/packages/util-linux-ng/install
@@ -8,8 +8,8 @@ do_install lib
 do_install usr/lib/libblkid.so
 do_install usr/lib/libuuid.so
 
-do_install bin/mount
-do_install bin/umount
+# do_install bin/mount
+# do_install bin/umount
 
 do_install sbin/blkid
 do_install sbin/fsck
