busybox : add 2 scripts

--- a/packages/busybox/install
+++ b/packages/busybox/install
@@ -13,6 +13,7 @@ cp $PACKAGES/$1/config/profile $INSTALL/etc
 cp $PACKAGES/$1/config/funcs $INSTALL/etc
 cp $PACKAGES/$1/config/ntpd.conf $INSTALL/etc
 cp $PACKAGES/$1/scripts/assign-ip $INSTALL/bin
+cp $PACKAGES/$1/scripts/pre-umount-* $INSTALL/bin
 
 # acpid specific
 if [ $TARGET_ARCH != i386 -o $TARGET_ARCH != x86_64 ]; then
