--- a/packages/busybox/install
+++ b/packages/busybox/install
@@ -5,7 +5,7 @@
 cp -PR $BUILD/$1*/_install/* $INSTALL
 mkdir -p $INSTALL/usr/share/udhcpc
 
-mkdir -p $INSTALL/etc $INSTALL/bin
+mkdir -p $INSTALL/etc $INSTALL/bin $INSTALL/sbin
 cp $PACKAGES/$1/config/passwd $INSTALL/etc
 cp $PACKAGES/$1/config/shadow $INSTALL/etc
 cp $PACKAGES/$1/config/group $INSTALL/etc
@@ -14,6 +14,8 @@ cp $PACKAGES/$1/config/funcs $INSTALL/etc
 cp $PACKAGES/$1/config/ntpd.conf $INSTALL/etc
 cp $PACKAGES/$1/scripts/assign-ip $INSTALL/bin
 cp $PACKAGES/$1/scripts/pre-umount-* $INSTALL/bin
+ln -s ../bin/pre-umount-poweroff $INSTALL/sbin/poweroff
+ln -s ../bin/pre-umount-reboot $INSTALL/sbin/reboot
 
 # acpid specific
 if [ $TARGET_ARCH != i386 -o $TARGET_ARCH != x86_64 ]; then
