--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -22,8 +22,8 @@ mkdir -p $INSTALL/usr/lib/tmpfiles.d
 # add symlinks for legacy SystemV utils
 mkdir -p $INSTALL/sbin
 ln -s ../bin/systemctl $INSTALL/sbin/halt
-ln -s ../bin/systemctl $INSTALL/sbin/poweroff
-ln -s ../bin/systemctl $INSTALL/sbin/reboot
+# ln -s ../bin/systemctl $INSTALL/sbin/poweroff
+# ln -s ../bin/systemctl $INSTALL/sbin/reboot
 ln -s ../lib/systemd/systemd $INSTALL/sbin/init
 
 [ -n "$MEDIA_CENTER_FRONTEND" ] && \
