--- a/packages/connman/install
+++ b/packages/connman/install
@@ -13,6 +13,7 @@ cp $ROOT/$PACKAGES/$1/config/network $INSTALL/etc
 cp $ROOT/$PACKAGES/$1/config/network-backend $INSTALL/etc
 cp $ROOT/$PACKAGES/$1/scripts/connman-parse-configuration $INSTALL/usr/lib/connman
 cp $ROOT/$PACKAGES/$1/scripts/net-udhcpc $INSTALL/usr/sbin
+cp $ROOT/$PACKAGES/$1/scripts/gen-resolv $INSTALL/usr/sbin
 
 NET=$INSTALL/etc/network
 [ -n "$TELNET_SERVER" ] && \
