mesa : fix link with libGLESv2

--- a/packages/mesa/install
+++ b/packages/mesa/install
@@ -29,8 +29,13 @@ if pkg_uses $1 openvg && [ "$OVG_PROVIDER" = mesa ]; then
 fi
 
 for i in $MESA_LIBS; do
-  ln -s /usr/lib/mesa/lib$i.so.1 $INSTALL/usr/lib/lib$i.so.1
-  ln -s lib$i.so.1 $INSTALL/usr/lib/lib$i.so
+  if [ "$i" = GLESv2 ] ; then
+    ln -s /usr/lib/mesa/lib$i.so.2 $INSTALL/usr/lib/lib$i.so.2
+    ln -s lib$i.so.2 $INSTALL/usr/lib/lib$i.so
+  else
+    ln -s /usr/lib/mesa/lib$i.so.1 $INSTALL/usr/lib/lib$i.so.1
+    ln -s lib$i.so.1 $INSTALL/usr/lib/lib$i.so
+  fi
 done
 
 exit 0
