--- a/packages/sgx540-OpenGLES/install
+++ b/packages/sgx540-OpenGLES/install
@@ -14,7 +14,7 @@ if pkg_uses $1 xorg; then
   do_install usr/share/sgx-lib
   mkdir -p $INSTALL/usr/share/X11/xorg.conf.d
   cp -P $ROOT/$PACKAGES/$1/config/99-pvr.conf $INSTALL/usr/share/X11/xorg.conf.d
-  do_install usr/lib/xorg/modules/drivers/pvr_drv.so
+  do_install usr/lib/xorg/modules/drivers/*.so
 fi
 
 exit 0
