tbs-drivers: all drivers from the tbs driver archive have to be added, otherwise other dvb cards or remote wont work

--- a/packages/tbs-drivers/install
+++ b/packages/tbs-drivers/install
@@ -7,14 +7,14 @@ DIR=$INSTALL/lib/modules/$(kernel_version)/tbs
 mkdir -p $DIR
 
 # Copy all
-#cp $BUILD/$1*/linux-tbs-drivers/v4l/*.ko $DIR
+cp $BUILD/$1*/linux-tbs-drivers/v4l/*.ko $DIR
 
 # Copy only select tbs drivers
-TBS_DRIVERS="dvb-core.ko dvb-usb.ko tbs*.ko dvb-usb-tbs*.ko saa716x_*.ko rc-tbs-nec.ko cx23885.ko stv090x.ko rc-core.ko cx2341x.ko videobuf-*.ko videodev.ko media.ko btcx-risc.ko tveeprom.ko v4l2*.ko"
+#TBS_DRIVERS="dvb-core.ko dvb-usb.ko tbs*.ko dvb-usb-tbs*.ko saa716x_*.ko rc-tbs-nec.ko cx23885.ko stv090x.ko rc-core.ko cx2341x.ko videobuf-*.ko videodev.ko media.ko btcx-risc.ko tveeprom.ko v4l2*.ko"
 
-for i in $TBS_DRIVERS; do
-  cp $BUILD/$1*/linux-tbs-drivers/v4l/$i $DIR
-done
+#for i in $TBS_DRIVERS; do
+#  cp $BUILD/$1*/linux-tbs-drivers/v4l/$i $DIR
+#done
 
 # Firmware 
 mkdir -p $INSTALL/firmware/
