ffmpeg : bump version to 0.10.2 (patch by Kenneth Tan)

--- a/packages/ffmpeg/install
+++ b/packages/ffmpeg/install
@@ -4,6 +4,4 @@
 
 cd $BUILD/$1*
 
-do_install usr/lib/libav*.so*
-do_install usr/lib/libswscale.so.*
-do_install usr/lib/libpostproc.so.*
+do_install usr/lib/lib*.so*
