--- a/packages/pcre/install
+++ b/packages/pcre/install
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 for i in pcre pcrecpp pcreposix; do
   do_install usr/lib/lib$i.so*
