vdr-sc: fix version and cleanup

--- a/packages/vdr-sc/install
+++ b/packages/vdr-sc/install
@@ -1,24 +1,26 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-ENABLED_PLUGINS="cardclient constcw sc-conax sc-cryptoworks sc-irdeto sc-nagra sc-seca sc-viaccess sc-videoguard2"
+ENABLED_PLUGINS="cardclient conax constcw cryptoworks irdeto nagra nds sc-conax sc-cryptoworks sc-irdeto sc-nagra sc-seca sc-viaccess sc-videoguard2 seca shl viaccess"
 
 mkdir -p $INSTALL/usr/lib/vdr
-cp -a $BUILD/$1*/lib$1*.so.* $INSTALL/usr/lib/vdr
+cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/lib*.so.* $INSTALL/usr/lib/vdr
+
 for plugin in $ENABLED_PLUGINS; do
-  cp $BUILD/$1*/systems/$plugin/libsc-*.so.* $INSTALL/usr/lib/vdr
+  cp $BUILD/${PKG_NAME}-${PKG_VERSION}/systems/$plugin/libsc-*.so.* $INSTALL/usr/lib/vdr
 done
 
 for loc in $INCLUDED_LOCALES; do
   LOCALE=`echo $loc|cut -f1 -d.`
-  if [ -d $BUILD/$1*/locale/$LOCALE ]; then
+  if [ -d $BUILD/${PKG_NAME}-${PKG_VERSION}/locale/$LOCALE ]; then
     mkdir -p $INSTALL/usr/share/locale/$LOCALE
-    cp -a $BUILD/$1*/locale/$LOCALE/* $INSTALL/usr/share/locale/$LOCALE/
+    cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/locale/$LOCALE/* $INSTALL/usr/share/locale/$LOCALE/
   fi
 done
 
-NAME=`echo $1 | sed s/vdr-//`
+NAME=`echo ${PKG_NAME}| sed s/vdr-//`
 
 mkdir -p $INSTALL/etc/vdr/plugins/$NAME
 touch $INSTALL/etc/vdr/plugins/$NAME/cardslot.conf
