--- a/packages/vdr-epgsearch/install
+++ b/packages/vdr-epgsearch/install
@@ -4,7 +4,7 @@
 get_meta $1
 
 mkdir -p $INSTALL/usr/lib/vdr
-cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/libvdr-*.so* $INSTALL/usr/lib/vdr
+cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/libvdr-*.so.* $INSTALL/usr/lib/vdr
 
 for loc in $INCLUDED_LOCALES; do
   LOCALE=`echo $loc|cut -f1 -d.`
