vdr: upgrade to 1.7.27

--- a/packages/vdr/install
+++ b/packages/vdr/install
@@ -1,15 +1,12 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-require_cxx $1
-
-VDR_DIR=`basename $BUILD/vdr-1*`
-
-cd $BUILD/$VDR_DIR
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 do_install usr/bin/vdr
-cp $ROOT/$PACKAGES/$1/scripts/* $INSTALL/usr/bin
+cp $ROOT/$PACKAGES/${PKG_NAME}/scripts/* $INSTALL/usr/bin
 
 mkdir -p $INSTALL/usr/lib/vdr
 
@@ -23,4 +20,4 @@ do_install etc/vdr
 mkdir -p $INSTALL/etc/vdr/plugins
 mkdir -p $INSTALL/etc/vdr/plugins.d
 
-cp $ROOT/$PACKAGES/$1/config/wakeup $INSTALL/etc
+cp $ROOT/$PACKAGES/${PKG_NAME}/config/wakeup $INSTALL/etc
