--- a/packages/vdr-dynamite/install
+++ b/packages/vdr-dynamite/install
@@ -1,11 +1,22 @@
 #!/bin/sh
 
 . config/options
-cd $BUILD/$1*
-mkdir -p $INSTALL/usr/lib/vdr
-cp libvdr-dynamite.so* $INSTALL/usr/lib/vdr
+get_meta $1
 
-NAME=`echo $1 | sed s/vdr-//`
-mkdir -p $INSTALL/etc/vdr/plugins.d $INSTALL/lib/udev/rules.d
+mkdir -p $INSTALL/usr/lib/vdr
+cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/libvdr-*.so.* $INSTALL/usr/lib/vdr
+
+for loc in $INCLUDED_LOCALES; do
+  LOCALE=`echo $loc|cut -f1 -d.`
+  if [ -d $BUILD/${PKG_NAME}-${PKG_VERSION}/locale/$LOCALE ]; then
+    mkdir -p $INSTALL/usr/share/locale/$LOCALE
+    cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/locale/$LOCALE/* $INSTALL/usr/share/locale/$LOCALE/
+  fi
+done
+
+NAME=`echo ${PKG_NAME} | sed s/vdr-//`
+mkdir -p $INSTALL/etc/vdr/plugins.d
 echo "PLUGIN=${NAME}" > $INSTALL/etc/vdr/plugins.d/50_$NAME
-cp $ROOT/$PACKAGES/$1/config/*.rules  $INSTALL/lib/udev/rules.d
+
+mkdir -p $INSTALL/lib/udev/rules.d
+cp $ROOT/$PACKAGES/${PKG_NAME}/config/*.rules  $INSTALL/lib/udev/rules.d
