major rework of network handling - new network-backend package, for proper support of multiple implementations   of networking - spun out the udhcpc stuff from connman into a separate "udhcpc" backend - updated connman to 1.0 - dropped ntpd when using connman, added support for properly setting   timeservers in connman config, using the geexbox ntp pool by default - dropped resolv.conf generation when using connman, connman uses an internal   resolver so /etc/resolv.conf will always contain only 127.0.0.1, added   support for overriding the DNS servers from DHCP in connman - the list in DNS_SERVERS is now space separated for consistency with other   options. - add google dns as fallback nameservers (used if the local network dns is   not working) - don't rewrite /etc/network, just update the single values - rework telnetd handling, check for enable status in socket unit

--- a/packages/connman/install
+++ b/packages/connman/install
@@ -5,26 +5,10 @@
 cd $BUILD/$1*
 
 do_install usr/sbin/connmand
-do_install usr/lib/connman/plugins/*.so
+do_install usr/lib/connman/plugins
 do_install usr/lib/connman/scripts
 do_install lib/systemd
 do_install etc
-cp $ROOT/$PACKAGES/$1/config/network $INSTALL/etc
-cp $ROOT/$PACKAGES/$1/config/network-backend $INSTALL/etc
-cp $ROOT/$PACKAGES/$1/scripts/connman-parse-configuration $INSTALL/usr/lib/connman
-cp $ROOT/$PACKAGES/$1/scripts/net-udhcpc $INSTALL/usr/sbin
-cp $ROOT/$PACKAGES/$1/scripts/gen-resolv $INSTALL/usr/sbin
 
-NET=$INSTALL/etc/network
-[ -n "$TELNET_SERVER" ] && \
-  sed -i "s/^TELNET_SERVER=.*/TELNET_SERVER=\"$TELNET_SERVER\"/" $NET
-[ -n "$FTP_SERVER" ] && \
-  sed -i "s/^FTP_SERVER=.*/FTP_SERVER=\"$FTP_SERVER\"/" $NET
-[ -n "$HTTP_SERVER" ] && \
-  sed -i "s/^HTTP_SERVER=.*/HTTP_SERVER=\"$HTTP_SERVER\"/" $NET
-[ -n "$SAMBA_SERVER" ] && \
-  sed -i "s/^SAMBA_SERVER=.*/SAMBA_SERVER=\"$SAMBA_SERVER\"/" $NET
-
-cat > $INSTALL/etc/issue <<EOF
-Welcome to $DISTRONAME $TARGET_ARCH $DISTRO_VERSION (C) 2002-2012
-EOF
+cp -P $ROOT/$PACKAGES/$1/scripts/connman-parse-configuration \
+  $INSTALL/usr/lib/connman
