--- a/packages/util-linux-ng/install
+++ b/packages/util-linux-ng/install
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*/objdir-target
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}/objdir-target
 
 do_install lib
 do_install usr/lib/libblkid.so
