LVM: fix install script

--- a/packages/LVM/install
+++ b/packages/LVM/install
@@ -5,7 +5,7 @@
 cd $BUILD/$1*
 
 do_install usr/sbin/lvm
-pkg_use $1 devtools && do_install usr/sbin/dmsetup
+pkg_uses $1 devtools && do_install usr/sbin/dmsetup
 
 do_install usr/lib/libdevmapper.so*
 do_install usr/lib/liblvm2app.so*
