installator : complete improved

--- a/packages/installator/install
+++ b/packages/installator/install
@@ -3,11 +3,15 @@
 . config/options
 
 mkdir -p $INSTALL/sbin
-cp $PACKAGES/$1/scripts/installator-mini.sh $INSTALL/sbin/$1
+cp $PACKAGES/$1/scripts/installator-dialog.sh $INSTALL/sbin/$1
 sed -i $INSTALL/sbin/$1 \
   -e "s/VERSION=dummy/VERSION=${DISTRO_VERSION}/" \
   -e "s/DISTRO=dummy/DISTRO=${DISTRONAME}/" \
   -e "s/ARCH=dummy/ARCH=${TARGET_ARCH}/" \
+
+mkdir -p $INSTALL/usr/share/installator
+cp $PACKAGES/$1/config/grub.cfg  $INSTALL/usr/share/installator
+cp $PACKAGES/$1/config/syslinux.cfg  $INSTALL/usr/share/installator
 
 # enable second login shell
 mkdir -p $INSTALL/lib/systemd/system/installator.target.wants/
