sgx540-OpenGLES: upgrade to 1.9.0.4.1.1

--- a/packages/sgx540-OpenGLES/install
+++ b/packages/sgx540-OpenGLES/install
@@ -12,8 +12,7 @@ fi
 
 if pkg_uses $1 xorg; then
   do_install usr/share/sgx-lib
-  mkdir -p $INSTALL/usr/share/X11/xorg.conf.d
-  cp -P $ROOT/$PACKAGES/$1/config/99-pvr.conf $INSTALL/usr/share/X11/xorg.conf.d
+  do_install usr/share/X11
   do_install usr/lib/xorg/modules/drivers/*.so
 fi
 
