--- a/packages/vdr/install
+++ b/packages/vdr/install
@@ -6,6 +6,7 @@ get_meta $1
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 do_install usr/bin/vdr
+do_install usr/bin/svdrpsend
 cp $ROOT/$PACKAGES/${PKG_NAME}/scripts/* $INSTALL/usr/bin
 
 mkdir -p $INSTALL/usr/lib/vdr
