xbmc : improve install script

--- a/packages/xbmc/install
+++ b/packages/xbmc/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1-pvr*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 cp -P $ROOT/$PACKAGES/$1/scripts/silent.sh .install/usr/bin
 cp -P $ROOT/$PACKAGES/$1/scripts/runxbmc .install/usr/bin
