usbutils : upgrade to 006

--- a/packages/usbutils/install
+++ b/packages/usbutils/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 if pkg_uses $1 devtools; then
   do_install usr/bin
