libffi, libffi-host : upgrade to 3.0.11 and prettify and standardize as gmp

--- a/packages/libffi/install
+++ b/packages/libffi/install
@@ -2,6 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
 
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+cd objdir-target
 do_install usr/lib/libffi.so*
