dbus : upgrade to 1.6.4

--- a/packages/dbus/install
+++ b/packages/dbus/install
@@ -2,8 +2,11 @@
 
 . config/options
 
-cd $BUILD/$1*/objdir-target
+get_meta $1
 
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+cd objdir-target
 do_install usr/bin
 do_install usr/lib/libdbus-1.so*
 do_install lib/systemd
