--- a/packages/libxml2/install
+++ b/packages/libxml2/install
@@ -2,6 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*/objdir-target
+get_meta $1
 
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+cd objdir-target
 do_install usr/lib/libxml2.so*
