--- a/packages/libXmu/install
+++ b/packages/libXmu/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 do_install usr/lib/libXmu.so*
 do_install usr/lib/libXmuu.so*
