libXpm : upgrade to 3.5.10

--- a/packages/libXpm/install
+++ b/packages/libXpm/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 pkg_uses $1 devtools && do_install usr/bin
 do_install usr/lib/libXpm.so*
