--- a/packages/libtool/install
+++ b/packages/libtool/install
@@ -2,6 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
 
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+cd libltdl
 do_install usr/lib/libltdl.so*
