--- a/packages/xf86-video-dove/install
+++ b/packages/xf86-video-dove/install
@@ -5,3 +5,6 @@
 cd $BUILD/$1*
 
 do_install usr/lib/xorg/modules/drivers/*_drv.so
+
+mkdir -p $INSTALL/etc/X11/xorg.conf.d
+cp $ROOT/$PACKAGES/$1/config/* $INSTALL/etc/X11/xorg.conf.d
