xbmc : remove pre-umount*

--- a/packages/busybox/install
+++ b/packages/busybox/install
@@ -11,9 +11,9 @@ cp $PACKAGES/$1/config/group $INSTALL/etc
 cp $PACKAGES/$1/config/profile $INSTALL/etc
 cp $PACKAGES/$1/config/funcs $INSTALL/etc
 cp $PACKAGES/$1/scripts/assign-ip $INSTALL/bin
-cp $PACKAGES/$1/scripts/pre-umount-* $INSTALL/bin
-ln -s ../bin/pre-umount-poweroff $INSTALL/sbin/poweroff
-ln -s ../bin/pre-umount-reboot $INSTALL/sbin/reboot
+#cp $PACKAGES/$1/scripts/pre-umount-* $INSTALL/bin
+#ln -s ../bin/pre-umount-poweroff $INSTALL/sbin/poweroff
+#ln -s ../bin/pre-umount-reboot $INSTALL/sbin/reboot
 
 # acpid specific
 if [ $TARGET_ARCH != i386 -o $TARGET_ARCH != x86_64 ]; then
