systemd : re-enable link

--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -29,8 +29,8 @@ cp $ROOT/$PACKAGES/$1/config/* $INSTALL/etc/udev/rules.d
 mkdir -p $INSTALL/sbin
 ln -s ../bin/systemctl $INSTALL/sbin/halt
 # busybox package installs wrappers for these
-#ln -s ../bin/systemctl $INSTALL/sbin/poweroff
-#ln -s ../bin/systemctl $INSTALL/sbin/reboot
+ln -s ../bin/systemctl $INSTALL/sbin/poweroff
+ln -s ../bin/systemctl $INSTALL/sbin/reboot
 ln -s ../lib/systemd/systemd $INSTALL/sbin/init
 
 # add more gettys
