--- a/packages/llvm/install
+++ b/packages/llvm/install
@@ -2,7 +2,10 @@
 
 . config/options
 
-cd  $BUILD/$1-[0-9]*/objdir-target
+get_meta $1
 
+cd $PKG_BUILD_DIR
+
+cd objdir-target
 do_install usr/lib/libLLVM*.so
 
