--- a/packages/opkg/install
+++ b/packages/opkg/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 mkdir -p $INSTALL/etc/opkg
 cp $ROOT/$PACKAGES/$1/config/opkg.conf $INSTALL/etc/opkg/
