GLib, GLib-host : apply improved -host package settings

--- a/packages/GLib/install
+++ b/packages/GLib/install
@@ -2,8 +2,11 @@
 
 . config/options
 
-cd $BUILD/$1*/objdir-target
+get_meta $1
 
+cd $PKG_BUILD_DIR
+
+cd objdir-target
 for lib in gio glib gmodule gobject gthread; do
   do_install usr/lib/lib$lib*.so*[.0-9]
 done
