--- a/packages/xf86-input-evdev/install
+++ b/packages/xf86-input-evdev/install
@@ -2,9 +2,11 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 do_install usr/lib/xorg/modules/input/*_drv.so
 
 mkdir -p $INSTALL/etc/X11/xorg.conf.d
-cp $ROOT/$PACKAGES/$1/config/* $INSTALL/etc/X11/xorg.conf.d
+cp $ROOT/$PACKAGES/$PKG_NAME/config/* $INSTALL/etc/X11/xorg.conf.d
