mesa: build with wayland support

--- a/packages/mesa/install
+++ b/packages/mesa/install
@@ -2,7 +2,8 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+cd $PKG_BUILD_DIR
 
 do_install usr/lib/libgbm.so*
 do_install usr/lib/libglapi.so*
@@ -26,6 +27,10 @@ fi
 
 if pkg_uses $1 openvg && [ "$OVG_PROVIDER" = mesa ]; then
   MESA_LIBS="$MESA_LIBS OpenVG"
+fi
+
+if pkg_uses $1 wayland; then
+  do_install usr/lib/libwayland-egl.so*
 fi
 
 for i in $MESA_LIBS; do
