--- a/packages/libjpeg-turbo/install
+++ b/packages/libjpeg-turbo/install
@@ -2,6 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*/objdir-target
+get_meta $1
 
+cd $PKG_BUILD_DIR
+
+cd objdir-target
 do_install usr/lib/libjpeg*.so*
