--- a/packages/automounter-smb/install
+++ b/packages/automounter-smb/install
@@ -3,5 +3,5 @@
 . config/options
 
 mkdir -p $INSTALL/usr/bin
-cp -P $ROOT/$PACKAGES/$1/scripts/automount_smb   $INSTALL/usr/bin
+cp -P $ROOT/$PACKAGES/$1/scripts/automount_smb*   $INSTALL/usr/bin
 cp -P $ROOT/$PACKAGES/$1/scripts/pre-umount      $INSTALL/usr/bin
