Update and harmonize the use of CONFIG_OPT_KEYMAP

--- a/packages/xorg-server/install
+++ b/packages/xorg-server/install
@@ -2,12 +2,14 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 do_install usr/bin/gtf
 do_install usr/bin/Xorg
 
-XORG_SRC="$BUILD/$1*/hw/xfree86"
+XORG_SRC="$PKG_BUILD_DIR/hw/xfree86"
 XORG_DST="$INSTALL/$XORG_PATH_MODULES"
 
 mkdir -p $XORG_DST
@@ -25,23 +27,24 @@ do_install usr/lib/xorg/modules/multimedia/*_drv.so
 
 do_install usr/share/X11/xorg.conf.d
 
-cp $ROOT/$PACKAGES/$1/scripts/* $INSTALL/usr/lib/xorg
+cp $ROOT/$PACKAGES/$PKG_NAME/scripts/* $INSTALL/usr/lib/xorg
 
 mkdir -p $INSTALL/etc
-cp $ROOT/$PACKAGES/$1/config/vconsole.conf $INSTALL/etc
+cp $ROOT/$PACKAGES/$PKG_NAME/config/vconsole.conf $INSTALL/etc
+[ -n "$KEYMAP" ] && sed -i -e "s/KEYMAP=.*/KEYMAP=$KEYMAP/g" $INSTALL/etc/vconsole.conf 
 
 mkdir -p $INSTALL/etc/X11
-cp $ROOT/$PACKAGES/$1/config/X.cfg $INSTALL/etc/X11
+cp $ROOT/$PACKAGES/$PKG_NAME/config/X.cfg $INSTALL/etc/X11
 
 mkdir -p $INSTALL/etc/X11/gpu
-cp $ROOT/$PACKAGES/$1/config/10-virtualbox.conf $INSTALL/etc/X11/gpu
+cp $ROOT/$PACKAGES/$PKG_NAME/config/10-virtualbox.conf $INSTALL/etc/X11/gpu
 
 if [ "$TARGET_PLATFORM" = omap3 -o "$TARGET_PLATFORM" = omap4 ]; then
   mkdir -p $INSTALL/usr/lib/xorg/gpu
-  cp -P $ROOT/$PACKAGES/$1/scripts/omap-gpu $INSTALL/usr/lib/xorg/gpu/omap.sh
+  cp -P $ROOT/$PACKAGES/$PKG_NAME/scripts/omap-gpu $INSTALL/usr/lib/xorg/gpu/omap.sh
 
   mkdir -p $INSTALL/etc/X11/gpu
-  cp -P $ROOT/$PACKAGES/$1/config/90-omapfb.conf $INSTALL/etc/X11/gpu
+  cp -P $ROOT/$PACKAGES/$PKG_NAME/config/90-omapfb.conf $INSTALL/etc/X11/gpu
 fi
 
 exit 0
