i18n : set DEFAULT_LANGUAGE based on Kconfig settings

--- a/packages/i18n/install
+++ b/packages/i18n/install
@@ -5,3 +5,8 @@
 mkdir -p $INSTALL/etc
 cp $PACKAGES/$1/scripts/lang.funcs $INSTALL/etc
 cp $PACKAGES/$1/config/lang.conf $INSTALL/etc
+
+if [ -n "$DEFAULT_LOCALE" ]; then
+  DEFAULT_LANGUAGE=$(echo $DEFAULT_LOCALE | cut -c 1-2)
+  sed -i -e "s/DEFAULT_LANGUAGE=.*/DEFAULT_LANGUAGE=$DEFAULT_LANGUAGE/g" $INSTALL/etc/lang.conf
+fi
