--- a/packages/connman/install
+++ b/packages/connman/install
@@ -5,7 +5,7 @@
 cd $BUILD/$1*
 
 do_install usr/sbin/connmand
-do_install usr/lib/connman/plugins
+#do_install usr/lib/connman/plugins
 do_install usr/lib/connman/scripts
 do_install lib/systemd
 do_install etc
