pulseaudio : bump to 2.0

--- a/packages/pulseaudio/install
+++ b/packages/pulseaudio/install
@@ -4,9 +4,7 @@
 
 cd $BUILD/$1*
 
-do_install usr/bin/pulseaudio
-do_install usr/bin/pacmd
-do_install usr/bin/pactl
+do_install usr/bin/
 cp $ROOT/$PACKAGES/$1/scripts/snd-device-switch $INSTALL/usr/bin
 cp $ROOT/$PACKAGES/$1/scripts/snd-device-list $INSTALL/usr/bin
 
