--- a/packages/eventlircd/install
+++ b/packages/eventlircd/install
@@ -10,3 +10,6 @@ do_install usr/sbin
 
 cp $ROOT/$PACKAGES/$1/config/eventlircd.conf $INSTALL/etc
 cp $ROOT/$PACKAGES/$1/config/evmap/* $INSTALL/etc/eventlircd.d
+
+mkdir -p $INSTALL/usr/bin
+cp $ROOT/$PACKAGES/$1/scripts/* $INSTALL/usr/bin
