--- a/packages/tvheadend/install
+++ b/packages/tvheadend/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 do_install usr/bin
 mkdir -p $INSTALL/etc/tvheadend/accesscontrol
