lirc : restore service for specific remotes

--- a/packages/lirc/install
+++ b/packages/lirc/install
@@ -16,3 +16,5 @@ fi
 mkdir -p $INSTALL/etc/lirc
 cp remotes/mceusb/lircd.conf.mceusb $INSTALL/etc/lirc/lircd.conf
 cp remotes/devinput/lircd.conf.devinput $INSTALL/etc/lirc
+cp -R remotes $INSTALL/etc/lirc
+cp $ROOT/$PACKAGES/$1/config/* $INSTALL/etc/lirc
