cec-firmware-upgrade : fix not existing link to old libudev.so.0

--- a/packages/cec-firmware-upgrade/install
+++ b/packages/cec-firmware-upgrade/install
@@ -6,4 +6,12 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
+# fix for udev missing link
+mkdir -p .install/lib
+cd .install/lib
+[ ! -h libudev.so.0 ] && ln -s libudev.so.1 libudev.so.0
+
+cd $ROOT/$PKG_BUILD_DIR
+
 do_install usr/bin
+do_install lib
