eventlircd : fix missing wakeup_enable and lircd_helper

--- a/packages/eventlircd/install
+++ b/packages/eventlircd/install
@@ -2,11 +2,14 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 do_install etc/eventlircd.d
-do_install lib/udev/rules.d
+do_install lib/udev
 do_install usr/sbin
+echo $INSTALL
 
 cp $ROOT/$PACKAGES/$1/config/eventlircd.conf $INSTALL/etc
 cp $ROOT/$PACKAGES/$1/config/evmap/* $INSTALL/etc/eventlircd.d
