firmware-nic-wifi-realtek : add firwares for RTL8192SE

--- a/packages/firmware-nic-wifi-realtek/install
+++ b/packages/firmware-nic-wifi-realtek/install
@@ -10,3 +10,6 @@ cp -P $BUILD/linux-firmware-r*/rtlwifi/* $INSTALL/firmware/rtlwifi
 
 mkdir -p $INSTALL/firmware/RTL8192E
 cp -P $BUILD/linux-firmware-r*/RTL8192E/* $INSTALL/firmware/RTL8192E
+
+mkdir -p $INSTALL/firmware/RTL8192SE
+cp -P $BUILD/linux-firmware-r*/RTL8192SE/* $INSTALL/firmware/RTL8192SE
