--- a/packages/tvheadend/install
+++ b/packages/tvheadend/install
@@ -7,6 +7,7 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 do_install usr/bin
+do_install usr/share/tvheadend
 mkdir -p $INSTALL/etc/tvheadend/accesscontrol
 cp $ROOT/$PACKAGES/$1/config/accesscontrol \
   $INSTALL/etc/tvheadend/accesscontrol/1
