--- a/packages/taglib/install
+++ b/packages/taglib/install
@@ -1,9 +1,10 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 require_cxx $1
-
-cd $BUILD/$1*
 
 do_install usr/lib/libtag*.so*
