rtorrent : add config, unit files

--- a/packages/rtorrent/install
+++ b/packages/rtorrent/install
@@ -4,4 +4,9 @@
 
 cd $BUILD/$1*
 
+mkdir -p .install/etc
+cp -P $ROOT/$PACKAGES/$1/config/* .install/etc
+cp -P $ROOT/$PACKAGES/$1/script/* .install/usr/bin
+
 do_install usr/bin
+do_install etc
