--- a/packages/libdrm/install
+++ b/packages/libdrm/install
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 do_install usr/lib/libdrm*.so*
 do_install usr/lib/libkms.so*
