dbus-glib : update to 0.100

--- a/packages/dbus-glib/install
+++ b/packages/dbus-glib/install
@@ -1,7 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*/objdir-target
+cd $PKG_BUILD_DIR
 
+cd objdir-target
 do_install usr/lib/libdbus-glib-1.so*
