--- a/packages/vdr-plugin-xvdr/install
+++ b/packages/vdr-plugin-xvdr/install
@@ -1,15 +1,17 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 mkdir -p $INSTALL/usr/lib/vdr
-cp -a $BUILD/$1*/lib*.so* $INSTALL/usr/lib/vdr
-
+cp -a lib*.so* $INSTALL/usr/lib/vdr
 
 NAME="xvdr"
 mkdir -p $INSTALL/etc/vdr/plugins.d
-echo "PLUGIN=${NAME}" > $INSTALL/etc/vdr/plugins.d/50_$NAME
+echo "PLUGIN=$NAME" > $INSTALL/etc/vdr/plugins.d/50_$NAME
 
-mkdir -p $INSTALL/etc/vdr/plugins/xvdr
-cp -P $BUILD/$1*/xvdr/allowed_hosts.conf $INSTALL/etc/vdr/plugins/xvdr
-echo '0.0.0.0/0' >> $INSTALL/etc/vdr/plugins/xvdr/allowed_hosts.conf
+mkdir -p $INSTALL/etc/vdr/plugins/$NAME
+cp -P $NAME/allowed_hosts.conf $INSTALL/etc/vdr/plugins/$NAME
+echo '0.0.0.0/0' >> $INSTALL/etc/vdr/plugins/$NAME/allowed_hosts.conf
