gstreamer : bump version to 1.0 (patch by Ben)

--- a/packages/gstreamer/install
+++ b/packages/gstreamer/install
@@ -4,22 +4,12 @@
 
 cd $BUILD/$1*
 
-do_install usr/lib/libgstreamer-$GST_VERSION.so*
-
-for i in elements indexers; do
-  do_install usr/lib/gstreamer-$GST_VERSION/libgstcore$i.so
-done
-
-for i in base check controller dataprotocol net; do
-  do_install usr/lib/libgst$i-$GST_VERSION.so*
-done
+do_install usr/lib/libgst*-$GST_VERSION.so*
+do_install usr/lib/gstreamer-$GST_VERSION/libgstcore*.so
 
 if pkg_uses $1 devtools; then
   do_install usr/libexec/gstreamer-$GST_VERSION/gst-plugin-scanner
-
-  for i in feedback inspect launch typefind xmlinspect xmllaunch; do
-    do_install usr/bin/gst-$i-$GST_VERSION
-  done
+  do_install usr/bin
 fi
 
 exit 0
