gst-plugins-base : bump version to 1.0.1 (patch by Ben)

--- a/packages/gst-plugins-base/install
+++ b/packages/gst-plugins-base/install
@@ -4,7 +4,7 @@
 
 cd $BUILD/$1*
 
-do_install usr/bin/gst-visualise-$GST_VERSION
+do_install usr/bin/gst-discoverer-$GST_VERSION
 
 # Core Libraries
 do_install usr/lib/libgst*-$GST_VERSION.so*
