hdparm : update to 9.42 and harmonize

--- a/packages/hdparm/install
+++ b/packages/hdparm/install
@@ -1,6 +1,8 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-mkdir -p $INSTALL/usr/sbin
-cp $BUILD/$1*/hdparm $INSTALL/usr/sbin
+cd $PKG_BUILD_DIR
+
+do_install sbin
