--- a/packages/kmod/install
+++ b/packages/kmod/install
@@ -5,6 +5,7 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
-do_install usr/lib
+cd objdir-target
+do_install usr/lib/libkmod*.so*
 do_install usr/bin
 do_install sbin
