vdr-plugin-xvdr : also install xvdr.conf

--- a/packages/vdr-plugin-xvdr/install
+++ b/packages/vdr-plugin-xvdr/install
@@ -15,3 +15,4 @@ echo "PLUGIN=$NAME" > $INSTALL/etc/vdr/plugins.d/50_$NAME
 mkdir -p $INSTALL/etc/vdr/plugins/$NAME
 cp -P $NAME/allowed_hosts.conf $INSTALL/etc/vdr/plugins/$NAME
 echo '0.0.0.0/0' >> $INSTALL/etc/vdr/plugins/$NAME/allowed_hosts.conf
+cp -P $NAME/xvdr.conf $INSTALL/etc/vdr/plugins/$NAME
