base-files : add DISTRIB_DESCRIPTION to /etc/lsb-release

--- a/packages/base-files/install
+++ b/packages/base-files/install
@@ -49,6 +49,7 @@ fi
 cat > $INSTALL/etc/lsb-release <<EOF
 DISTRIB_ID=$DISTRONAME
 DISTRIB_RELEASE=$DISTRO_VERSION
+DISTRIB_DESCRIPTION="$DISTRONAME $DISTRO_VERSION"
 EOF
 
 cat > $INSTALL/etc/os-release <<EOF
