network : allow to configure two network cards

--- a/packages/connman/install
+++ b/packages/connman/install
@@ -10,7 +10,7 @@ do_install usr/lib/connman/scripts
 do_install lib/systemd
 do_install etc
 
-cp -P $ROOT/$PACKAGES/$1/scripts/connman-parse-configuration \
+cp -P $ROOT/$PACKAGES/$1/scripts/connman-parse-configuration* \
   $INSTALL/usr/lib/connman
 
 mkdir -p $INSTALL/lib/systemd/system/multi-user.target.wants
