--- a/packages/network-backend/install
+++ b/packages/network-backend/install
@@ -3,7 +3,7 @@
 . config/options
 
 mkdir $INSTALL/etc
-cp -P $PACKAGES/$1/config/network $INSTALL/etc
+cp -P $PACKAGES/$1/config/network* $INSTALL/etc
 
 NET=$INSTALL/etc/network
 [ -n "$NETWORK_BACKEND" ] && \
