--- a/packages/xbmc/install
+++ b/packages/xbmc/install
@@ -6,10 +6,14 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
+mkdir -p .install/etc/xbmc
+
 cp -P $ROOT/$PACKAGES/$1/scripts/silent.sh .install/usr/bin
 cp -P $ROOT/$PACKAGES/$1/scripts/runxbmc .install/usr/bin
 cp -P $ROOT/$PACKAGES/$1/scripts/setwakeup.sh .install/usr/bin
+cp -P $ROOT/$PACKAGES/$1/config/*.xml .install/etc/xbmc
 
 do_install usr/bin
 do_install usr/lib
 do_install usr/share
+do_install etc/xbmc
