connman : make client command tool optional

--- a/packages/connman/install
+++ b/packages/connman/install
@@ -10,6 +10,9 @@ do_install usr/sbin/connmand
 do_install usr/lib/connman/scripts
 do_install lib/systemd
 do_install etc
+if pkg_uses $1 client; then
+  do_install usr/bin
+fi
 
 cp -P $ROOT/$PACKAGES/$1/scripts/connman-parse-configuration* \
   $INSTALL/usr/lib/connman
