--- a/packages/mesa/install
+++ b/packages/mesa/install
@@ -7,7 +7,7 @@ cd $PKG_BUILD_DIR
 
 do_install usr/lib/libgbm.so*
 do_install usr/lib/libglapi.so*
-do_install usr/lib/libGLU.so*
+do_install usr/lib/libdricore*.so*
 do_install usr/lib/dri
 do_install usr/lib/mesa
 pkg_uses $1 gallium3d && do_install usr/lib/gbm
@@ -42,5 +42,7 @@ for i in $MESA_LIBS; do
     ln -s lib$i.so.1 $INSTALL/usr/lib/lib$i.so
   fi
 done
+
+do_install etc/drirc
 
 exit 0
