bluez : add service, use rules from package

--- a/packages/bluez/install
+++ b/packages/bluez/install
@@ -23,6 +23,5 @@ cp -P src/main.conf $INSTALL/etc/bluetooth
 mkdir -p $INSTALL/etc/dbus-1/system.d
 cp -P src/bluetooth.conf $INSTALL/etc/dbus-1/system.d
 
-mkdir -p $INSTALL/etc/udev/rules.d
-cp $ROOT/$PACKAGES/$1/config/bluetooth.rules \
-  $INSTALL/etc/udev/rules.d/97_bluetooth.rules
+do_install lib/udev
+
