cwiid : build with python

--- a/packages/cwiid/install
+++ b/packages/cwiid/install
@@ -7,9 +7,10 @@ cd $BUILD/$1*
 do_install usr/bin
 do_install usr/lib/libcwiid.so*
 do_install usr/lib/cwiid/plugins/*.so
+do_install usr/lib/python*
 
-mkdir -p $INSTALL/etc
-cp $ROOT/$PACKAGES/$1/config/wiimote $INSTALL/etc
+#mkdir -p $INSTALL/etc
+#cp $ROOT/$PACKAGES/$1/config/wiimote $INSTALL/etc
 
-mkdir -p $INSTALL/etc/cwiid/wminput
-cp $ROOT/$PACKAGES/$1/config/enna $INSTALL/etc/cwiid/wminput
+#mkdir -p $INSTALL/etc/cwiid/wminput
+#cp $ROOT/$PACKAGES/$1/config/enna $INSTALL/etc/cwiid/wminput
