fix firmware packages depending on linux-firmware

--- a/packages/firmware-graphics-radeon/install
+++ b/packages/firmware-graphics-radeon/install
@@ -2,5 +2,10 @@
 
 . config/options
 
+get_meta linux-firmware
+LINUX_FIRMWARE_VERSION=$PKG_VERSION
+
+get_meta $1
+
 mkdir -p $INSTALL/firmware/radeon
-cp -P $BUILD/linux-firmware-r*/radeon/* $INSTALL/firmware/radeon
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/radeon/* $INSTALL/firmware/radeon
