--- a/packages/firmware-nic-wifi-realtek/install
+++ b/packages/firmware-nic-wifi-realtek/install
@@ -2,14 +2,19 @@
 
 . config/options
 
+get_meta linux-firmware
+LINUX_FIRMWARE_VERSION=$PKG_VERSION
+
+get_meta $1
+
 mkdir -p $INSTALL/firmware/rtl_nic
-cp -P $BUILD/linux-firmware-r*/rtl_nic/* $INSTALL/firmware/rtl_nic
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/rtl_nic/* $INSTALL/firmware/rtl_nic
 
 mkdir -p $INSTALL/firmware/rtlwifi
-cp -P $BUILD/linux-firmware-r*/rtlwifi/* $INSTALL/firmware/rtlwifi
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/rtlwifi/* $INSTALL/firmware/rtlwifi
 
 mkdir -p $INSTALL/firmware/RTL8192E
-cp -P $BUILD/linux-firmware-r*/RTL8192E/* $INSTALL/firmware/RTL8192E
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/RTL8192E/* $INSTALL/firmware/RTL8192E
 
 mkdir -p $INSTALL/firmware/RTL8192SE
-cp -P $BUILD/linux-firmware-r*/RTL8192SE/* $INSTALL/firmware/RTL8192SE
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/RTL8192SE/* $INSTALL/firmware/RTL8192SE
