--- a/packages/firmware-wifi-marvel-libertas/install
+++ b/packages/firmware-wifi-marvel-libertas/install
@@ -2,5 +2,10 @@
 
 . config/options
 
+get_meta linux-firmware
+LINUX_FIRMWARE_VERSION=$PKG_VERSION
+
+get_meta $1
+
 mkdir -p $INSTALL/firmware/libertas
-cp -P $BUILD/linux-firmware-r*/libertas/* $INSTALL/firmware/libertas
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/libertas/* $INSTALL/firmware/libertas
