--- a/packages/firmware-wifi-ralink/install
+++ b/packages/firmware-wifi-ralink/install
@@ -2,5 +2,10 @@
 
 . config/options
 
+get_meta linux-firmware
+LINUX_FIRMWARE_VERSION=$PKG_VERSION
+
+get_meta $1
+
 mkdir -p $INSTALL/firmware
-cp -P $BUILD/linux-firmware-r*/rt*.bin $INSTALL/firmware/
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/rt*.bin $INSTALL/firmware/
