--- a/packages/firmware-wifi-wilink12xx/install
+++ b/packages/firmware-wifi-wilink12xx/install
@@ -2,6 +2,11 @@
 
 . config/options
 
+get_meta linux-firmware
+LINUX_FIRMWARE_VERSION=$PKG_VERSION
+
+get_meta $1
+
 mkdir -p $INSTALL/firmware/ti-connectivity
-cp -P $BUILD/linux-firmware-r*/ti-connectivity/* $INSTALL/firmware/ti-connectivity
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/ti-connectivity/* $INSTALL/firmware/ti-connectivity
 chmod -x $INSTALL/firmware/ti-connectivity/*
