--- a/packages/firmware-wifi-brcm80211/install
+++ b/packages/firmware-wifi-brcm80211/install
@@ -2,5 +2,10 @@
 
 . config/options
 
+get_meta linux-firmware
+LINUX_FIRMWARE_VERSION=$PKG_VERSION
+
+get_meta $1
+
 mkdir -p $INSTALL/firmware/brcm
-cp -P $BUILD/linux-firmware-r*/brcm/* $INSTALL/firmware/brcm
+cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/brcm/* $INSTALL/firmware/brcm
