vdr-sc : harmonize

--- a/packages/vdr-sc/install
+++ b/packages/vdr-sc/install
@@ -1,23 +1,22 @@
 #!/bin/sh
 
 . config/options
-
 get_meta $1
 
 ENABLED_PLUGINS="cardclient conax constcw cryptoworks irdeto nagra nds sc-conax sc-cryptoworks sc-irdeto sc-nagra sc-seca sc-viaccess sc-videoguard2 seca shl viaccess"
 
 mkdir -p $INSTALL/usr/lib/vdr
-cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/lib*.so.* $INSTALL/usr/lib/vdr
+cp -a $PKG_BUILD_DIR/lib*.so.* $INSTALL/usr/lib/vdr
 
 for plugin in $ENABLED_PLUGINS; do
-  cp $BUILD/${PKG_NAME}-${PKG_VERSION}/systems/$plugin/libsc-*.so.* $INSTALL/usr/lib/vdr
+  cp $PKG_BUILD_DIR/systems/$plugin/libsc-*.so.* $INSTALL/usr/lib/vdr
 done
 
 for loc in $INCLUDED_LOCALES; do
   LOCALE=`echo $loc|cut -f1 -d.`
-  if [ -d $BUILD/${PKG_NAME}-${PKG_VERSION}/locale/$LOCALE ]; then
+  if [ -d $PKG_BUILD_DIR/locale/$LOCALE ]; then
     mkdir -p $INSTALL/usr/share/locale/$LOCALE
-    cp -a $BUILD/${PKG_NAME}-${PKG_VERSION}/locale/$LOCALE/* $INSTALL/usr/share/locale/$LOCALE/
+    cp -a $PKG_BUILD_DIR/locale/$LOCALE/* $INSTALL/usr/share/locale/$LOCALE/
   fi
 done
 
