firmware-nic-wifi-realtek : remove rtl9182SE

--- a/packages/firmware-nic-wifi-realtek/install
+++ b/packages/firmware-nic-wifi-realtek/install
@@ -16,5 +16,5 @@ cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/rtlwifi/* $INSTALL/firmwar
 mkdir -p $INSTALL/firmware/RTL8192E
 cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/RTL8192E/* $INSTALL/firmware/RTL8192E
 
-mkdir -p $INSTALL/firmware/RTL8192SE
-cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/RTL8192SE/* $INSTALL/firmware/RTL8192SE
+#mkdir -p $INSTALL/firmware/RTL8192SE
+#cp -P $BUILD/linux-firmware-${LINUX_FIRMWARE_VERSION}/RTL8192SE/* $INSTALL/firmware/RTL8192SE
