openssl : install bin files

--- a/packages/openssl/install
+++ b/packages/openssl/install
@@ -7,3 +7,5 @@ cd $BUILD/$1*
 do_install usr/lib/libcrypto.so*
 do_install usr/lib/libssl.so*
 do_install usr/lib/engines
+do_install usr/bin
+do_install etc
