--- a/packages/mesa/install
+++ b/packages/mesa/install
@@ -13,6 +13,7 @@ do_install usr/lib/mesa
 pkg_uses $1 gallium3d && do_install usr/lib/gbm
 [ -d .install/usr/lib/vdpau ] && do_install usr/lib/vdpau
 pkg_uses $1 xvmc && ls usr/lib/libXvMC* >/dev/null 2>&1 && do_install usr/lib/libXvMC*
+pkg_uses $1 osmesa && do_install usr/lib/libOSMesa*.so*
 
 MESA_LIBS="GL"
 
