--- a/packages/lcms2/install
+++ b/packages/lcms2/install
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 pkg_uses $1 devtools && do_install usr/bin
 do_install usr/lib/liblcms2.so*
