ghostscript : fix install script

--- a/packages/ghostscript/install
+++ b/packages/ghostscript/install
@@ -4,8 +4,4 @@
 
 cd $BUILD/$1*
 
-do_install usr/bin/nano
-do_install usr/share/nano
-
-mkdir -p $INSTALL/etc
-cp -P $ROOT/$PACKAGES/$1/config/nanorc $INSTALL/etc
+do_install .
