cups : update build & install scripts

--- a/packages/cups/install
+++ b/packages/cups/install
@@ -6,4 +6,10 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
-do_install .
+cp $ROOT/$PACKAGES/$1/config/cupsd.conf .install/etc/cups
+do_install etc/cups
+do_install usr/bin
+do_install usr/sbin
+do_install usr/lib
+do_install usr/share
+do_install var
