Undo accidently pushed changes

--- a/packages/connman/install
+++ b/packages/connman/install
@@ -5,7 +5,7 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
-do_install usr/sbin/connmand*
+do_install usr/sbin/connmand
 #do_install usr/lib/connman/plugins
 do_install usr/lib/connman/scripts
 do_install lib/systemd
