cups : add a script to fix perms

--- a/packages/cups/install
+++ b/packages/cups/install
@@ -7,6 +7,7 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 cp $ROOT/$PACKAGES/$1/config/cupsd.conf .install/etc/cups
+cp $ROOT/$PACKAGES/$1/scripts/* .install/usr/bin
 do_install etc/cups
 do_install usr/bin
 do_install usr/sbin
