alsa-utils: add speaker test program

--- a/packages/alsa-utils/install
+++ b/packages/alsa-utils/install
@@ -15,6 +15,7 @@ if pkg_uses $1 devtools; then
   do_install usr/bin/alsamixer
   do_install usr/bin/aplay
   do_install usr/bin/iecset
+  do_install usr/bin/speaker-test
 
   do_install usr/sbin/alsactl
   do_install usr/sbin/alsaconf
