smaba-server : install more binaries

--- a/packages/samba-server/install
+++ b/packages/samba-server/install
@@ -7,7 +7,9 @@ cd $BUILD/samba-*/source3
 do_install usr/lib/samba/auth
 do_install usr/lib/samba/vfs
 
-do_install usr/sbin/smbd
+
+do_install usr/sbin
+do_install usr/bin
 
 mkdir -p $INSTALL/etc
 cp $ROOT/$PACKAGES/$1/config/smb.conf $INSTALL/etc/
