systemd : make console output less verbose

--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -48,4 +48,7 @@ if [ -n "$DEFAULT_SYSTEMD_TARGET" ]; then
     $INSTALL/etc/systemd/system/default.target
 fi
 
+# reduce verbosity a bit
+sed -i -e "s/#LogLevel=info/LogLevel=notice/" $INSTALL/etc/systemd/system.conf
+
 exit 0
