systemd : do not use display-manager.service

--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -51,4 +51,7 @@ fi
 # reduce verbosity a bit
 sed -i -e "s/#LogLevel=info/LogLevel=notice/" $INSTALL/etc/systemd/system.conf
 
+# we don't use display-manager ...
+sed -i -e "s/Wants=display-manager.service/#Wants=display-manager.service/" $INSTALL/lib/systemd/system/graphical.target
+
 exit 0
