systemd : use alternate method to disable (i.e. mask) unsused services, disable xorg on RaspberryPi

--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -52,6 +52,11 @@ fi
 sed -i -e "s/#LogLevel=info/LogLevel=notice/" $INSTALL/etc/systemd/system.conf
 
 # we don't use display-manager ...
-sed -i -e "s/Wants=display-manager.service/#Wants=display-manager.service/" $INSTALL/lib/systemd/system/graphical.target
+ln -s /dev/null $INSTALL/etc/systemd/system/display-manager.service
+
+# on RaspberryPi we doesn't use X
+if [ "$TARGET_MACHINE" = raspberrypi ]; then
+  ln -s /dev/null $INSTALL/etc/systemd/system/xorg.service
+fi
 
 exit 0
