systemd : disable predictable network interface names

--- a/packages/systemd/install
+++ b/packages/systemd/install
@@ -59,4 +59,7 @@ if [ "$TARGET_MACHINE" = raspberrypi ]; then
   ln -s /dev/null $INSTALL/etc/systemd/system/xorg.service
 fi
 
+# disable "Predictable Network Interface Names"
+ln -s /dev/null $INSTALL/etc/udev/rules.d/80-net-name-slot.rules
+
 exit 0
